syntax = "proto3";

package api.v1;
option go_package = "api/v1/greeter;grt";

service Greeter {
	rpc Hello (HelloRequest) returns (HelloResponse) {}
	rpc Person (PersonRequest) returns (PersonResponse) {}
}

//==========================
message HelloRequest {}

message HelloResponse {
	string my_message = 1;
}

//==========================
message PersonRequest {
		int32 id=1;	 //传入person id
}

message PersonResponse {
	string name = 1;
	int32 id = 2;
	string email = 3;
	enum PhoneType {
		MOBILE = 0;
		HOME = 1;
		WORK = 2;
	}
	message PhoneNumber {
		string number = 1;
		PhoneType type = 2;
	}
	repeated PhoneNumber phones = 4;
}